--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Example input",
             "type": "python",
             "request": "launch",
             "program": "${file}",
+            "args": ["${workspaceFolder}/${relativeFileDirname}/example_input.txt"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
