--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,17 @@
             ],
             "console": "integratedTerminal",
             "justMyCode": true
+        },
+        {
+            "name": "Test input",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": [
+                "${workspaceFolder}/${relativeFileDirname}/test_input.txt"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
